Add more properties to Trial Object, css styling

--- a/clinicalTrials-frontend/src/app/app.component.html
+++ b/clinicalTrials-frontend/src/app/app.component.html
@@ -1,11 +1,17 @@
 <p>
   <mat-toolbar>
     <span>Clinical Trials logo</span>
-    <button mat-icon-button class="person-icon" aria-label="Person icon-button with share icon">
+    <button mat-icon-button class="person-icon user-button" aria-label="Person icon-button with share icon">
       <mat-icon>person</mat-icon>
     </button>
   </mat-toolbar>
 
 </p>
-<app-main-page></app-main-page>
-<footer>footer</footer>
+<section class="content">
+  <app-trial-list></app-trial-list>
+</section>
+<footer class="footer">
+  <div>
+    <p>UOA Bionformatics 2021 - 2022</p>
+  </div>
+</footer>
