added tables in front-end for trial

--- a/clinicalTrials-frontend/src/app/app.component.html
+++ b/clinicalTrials-frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <p>
   <mat-toolbar>
-    <span>Clinical Trials logo</span>
+    <span>Clinical Trials </span>
     <button mat-icon-button class="person-icon user-button" aria-label="Person icon-button with share icon">
       <mat-icon>person</mat-icon>
     </button>
