--- a/clinicalTrials-frontend/src/app/trial-list/trial-list.component.css
+++ b/clinicalTrials-frontend/src/app/trial-list/trial-list.component.css
@@ -14,3 +14,18 @@
     margin-left: auto;
 }
 
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: center;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
