--- a/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
+++ b/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
@@ -1,22 +1,50 @@
 <div>
-    <h2>Trials List</h2>
+    <h2 style="text-align: center;">Trials List</h2>
 </div>
+<br>
+<br>
 <div>
     <mat-list>
         <mat-list-item *ngFor="let trial of trials | async">
             <div class="trial-text-container">
-                <h4 mat-line>{{trial.eudraCTNumber}}</h4>
-                <p mat-line> {{trial.trialStatus}} </p>
-                <p mat-line> {{trial.designOfTheTrial}} </p>
-                <p mat-line> {{trial.trialTypePhase}} </p>
-                <p mat-line> {{trial.scopeOfTheTrial}} </p>
+                <table>
+                    <tr >
+                        <th colspan ="100%" style="text-align: center;">
+                            Trials List
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>eudraCTNumber</th>
+                        <th>Trial Status</th>
+                        <th>Design of the Trial</th>
+                        <th>Trial Type Phase</th>
+                        <th>Scope of the Trial</th>
+                        <th>Estimated Duration</th>
+                        <th >Link</th>
+                        <th>Therapeutic Area</th>
+                        <th>Number of Subjects</th>
+                        <th>First Added Date</th>
+                    </tr>
+                    <tr>
+                        <td >{{trial.eudraCTNumber}}</td>
+                        <td > {{trial.trialStatus}} </td>
+                        <td > {{trial.designOfTheTrial}} </td>
+                        <td > {{trial.trialTypePhase}} </td>
+                        <td > {{trial.scopeOfTheTrial}} </td>
+                        <td> {{trial.estimatedDuration}}</td>
+                        <td>{{trial.link}}</td>
+                        <td>{{trial.therapeuticArea}}</td>
+                        <td>{{trial.numberOfSubjects}}</td>
+                        <td>{{trial.firstAddedDate}}</td>
+                    </tr>
+                </table>
             </div>
             <div class="button-container">
                 <button [disabled]="!hasUser" mat-icon-button color="primary" (click)="deleteTrial(trial.eudraCTNumber)"
                     aria-label="Delete Trial" title="Delete Trial">
                     <mat-icon>delete</mat-icon>
                 </button>
-                <button mat-icon-button [disabled]="!hasUser" color="primary" (click)="editTrial(trial.eudraCTNumber)"
+                <button mat-icon-button ="!hasUser" color="primary" (click)="editTrial(trial.eudraCTNumber)"
                     aria-label="Edit Trial" title="Edit Trial">
                     <mat-icon>edit</mat-icon>
                 </button>
