Add main page and update trials page

--- a/clinicalTrials-frontend/src/app/app.component.html
+++ b/clinicalTrials-frontend/src/app/app.component.html
@@ -1,14 +1,6 @@
-<p>
-  <mat-toolbar>
-    <span>Clinical Trials </span>
-    <button mat-icon-button class="person-icon user-button" aria-label="Person icon-button with share icon">
-      <mat-icon>person</mat-icon>
-    </button>
-  </mat-toolbar>
-
-</p>
+<app-header></app-header>
 <section class="content">
-  <app-trial-list></app-trial-list>
+  <router-outlet></router-outlet>
 </section>
 <footer class="footer">
   <div>
