--- a/clinicalTrials-frontend/src/app/app.component.css
+++ b/clinicalTrials-frontend/src/app/app.component.css
@@ -1,19 +1,15 @@
 .content {
-    min-height: calc(100vh - 94px - 64px);
+    min-height: calc(100vh - 146px);
 }
 
-.user-button {
-    margin-left: auto;
-}
 
 .footer {
     height: 50px;
     background: #f5f5f5;
-    color: rgba(0,0,0,.87);
+    color: rgba(0, 0, 0, .87);
     margin-left: auto;
     display: flex;
     align-items: center;
     padding: 16px;
     justify-content: end;
 }
-
