--- a/clinicalTrials-frontend/src/app/trial-list/trial-list.component.css
+++ b/clinicalTrials-frontend/src/app/trial-list/trial-list.component.css
@@ -1,20 +1,22 @@
 .trial-text-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 4px 8px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4px 8px;
+  width: 100%;
 }
 
-.trial-text-container  h4, .trial-text-container p {
-        margin: 0px 8px;
+.trial-text-container h4,
+.trial-text-container p {
+  margin: 0px 8px;
 }
 
-.button-container {
-    margin-left: auto;
-}
+.button-container {}
 
-table {
+
+
+/* table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
@@ -28,4 +30,8 @@ table {
   
   tr:nth-child(even) {
     background-color: #dddddd;
-  }
+  } */
+
+button:hover {
+  cursor: pointer;
+}
