--- a/clinicalTrials-frontend/src/app/header/header.component.html
+++ b/clinicalTrials-frontend/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <button mat-icon-button (click)="goToMain()">Clinical Trials </button>
+    <button mat-button (click)="goToMain()">Clinical Trials</button>
     <button mat-icon-button class="person-icon user-button" aria-label="Person icon-button with share icon">
         <mat-icon>person</mat-icon>
     </button>
