--- a/clinicalTrials-frontend/src/app/small-dialog/small-dialog.component.html
+++ b/clinicalTrials-frontend/src/app/small-dialog/small-dialog.component.html
@@ -1,1 +1,8 @@
-Are you sure you want to delete this trial?
+<h2 mat-dialog-title>{{data.title }}</h2>
+<mat-dialog-content class="mat-typography">
+    <h3>{{data.text }}</h3>
+</mat-dialog-content>
+<mat-dialog-actions *ngIf="data.hasButtons" align="end">
+    <button mat-button mat-dialog-close>Cancel</button>
+    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>{{data.buttonName}}</button>
+</mat-dialog-actions>
