--- a/clinicalTrials-frontend/src/styles.css
+++ b/clinicalTrials-frontend/src/styles.css
@@ -20,3 +20,7 @@ body {
 .mat-list-base .mat-list-option .mat-list-item-content {
     justify-content: space-between;
 }
+
+.mat-dialog-container {
+    min-width: 800px;
+}
