test frontend commit

--- a/clinicalTrials-frontend/src/app/trial-details/trial-details.component.html
+++ b/clinicalTrials-frontend/src/app/trial-details/trial-details.component.html
@@ -7,7 +7,7 @@
         <mat-divider></mat-divider>
         <mat-list-item>Trial Status: {{trial.trialStatus}}</mat-list-item>
         <mat-divider></mat-divider>
-        <mat-list-item>Link: <a href="{{trial.link}}">{{trial.link}}</a></mat-list-item>
+        <mat-list-item>Link: &nbsp;  <a href="{{trial.link}}">{{trial.link}}</a></mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item>Trial Type Phase: {{trial.trialTypePhase}} </mat-list-item>
         <mat-divider></mat-divider>
