--- a/clinicalTrials-frontend/src/app/trial-list/trial-list.component.css
+++ b/clinicalTrials-frontend/src/app/trial-list/trial-list.component.css
@@ -5,6 +5,13 @@
   align-items: center;
   padding: 4px 8px;
   width: 100%;
+  flex-wrap: wrap;
+
+  
+}
+
+.trial-text-container>* {
+  flex: 0 5 5%;
 }
 
 .trial-text-container h4,
@@ -26,4 +33,8 @@
 
 button:hover {
   cursor: pointer;
+}
+
+h4{
+  font-weight: bold;
 }
