--- a/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
+++ b/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
@@ -21,7 +21,7 @@
         </mat-list-item>
         <mat-list-item *ngFor="let trial of trials | async">
             <div class="trial-text-container">
-                <h4 mat-line>{{trial.eudraCTNumber}}</h4>
+                <p mat-line>{{trial.eudraCTNumber}}</p>
                 <p mat-line> {{trial.trialStatus}} </p>
                 <p mat-line> {{trial.designOfTheTrial}} </p>
                 <p mat-line> {{trial.trialTypePhase}} </p>
