--- a/clinicalTrials-frontend/src/app/trial-form/trial-form.component.html
+++ b/clinicalTrials-frontend/src/app/trial-form/trial-form.component.html
@@ -2,46 +2,48 @@
 <mat-dialog-content class="mat-typography">
     <h3>Basic Info</h3>
     <mat-divider></mat-divider>
-    <form class="clinical-trials-form">
+    <mat-spinner *ngIf="this.isLoading"></mat-spinner>
+
+    <form *ngIf="!this.isLoading" class="clinical-trials-form" [formGroup]="trialForm">
         <mat-form-field appearance="legacy" req>
             <mat-label>EudraCT Number</mat-label>
-            <input matInput placeholder="EudraCTNumber" required>
+            <input matInput placeholder="EudraCTNumber" formControlName="eudraCTNumber" required>
         </mat-form-field>
         <mat-form-field appearance="legacy" req>
             <mat-label>Status</mat-label>
-            <input matInput placeholder="trialStatus" required>
+            <input matInput placeholder="trialStatus" formControlName="trialStatus" required>
         </mat-form-field>
         <mat-form-field appearance="legacy" req>
             <mat-label>Link</mat-label>
-            <input matInput placeholder="link" required>
+            <input matInput placeholder="link" formControlName="link" required>
         </mat-form-field>
         <mat-form-field appearance="legacy" req>
             <mat-label>Type Phase</mat-label>
-            <input matInput placeholder="trialTypePhase" required>
+            <input matInput placeholder="trialTypePhase" formControlName="trialTypePhase" required>
         </mat-form-field>
         <mat-form-field appearance="legacy" req>
             <mat-label>Design Of The Trial</mat-label>
-            <input matInput placeholder="Design Of The Trial" required>
+            <input matInput placeholder="Design Of The Trial" formControlName="designOfTheTrial" required>
         </mat-form-field>
         <mat-form-field appearance="legacy" req>
             <mat-label>Number Of Subjects</mat-label>
-            <input matInput placeholder="Number Of Subjects" required>
+            <input matInput placeholder="Number Of Subjects" formControlName="numberOfSubjects" required>
         </mat-form-field>
         <mat-form-field appearance="legacy" req>
             <mat-label>Therapeutic Area</mat-label>
-            <input matInput placeholder="Therapeutic Area" required>
+            <input matInput placeholder="Therapeutic Area" formControlName="therapeuticArea" required>
         </mat-form-field>
         <mat-form-field appearance="legacy" req>
             <mat-label>Estimated Duration</mat-label>
-            <input matInput placeholder="Estimated Duration" required>
+            <input matInput placeholder="Estimated Duration" formControlName="estimatedDuration" required>
         </mat-form-field>
         <mat-form-field appearance="legacy" req>
             <mat-label>Scope Of The Trial</mat-label>
-            <input matInput placeholder="EudraCTNumber" required>
+            <input matInput placeholder="Scope of the Trial" formControlName="scopeOfTheTrial" required>
         </mat-form-field>
         <mat-form-field appearance="fill">
             <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="picker">
+            <input matInput [matDatepicker]="picker" formControlName="firstAddedDate">
             <mat-hint>MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
@@ -50,5 +52,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Close</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>{{buttonName}}</button>
+    <button mat-button [mat-dialog-close]="true" (click)="onSubmit()" cdkFocusInitial>{{buttonName}}</button>
 </mat-dialog-actions>
