Add logic for Add and Update Trial

--- a/clinicalTrials-frontend/src/app/trial-form/trial-form.component.html
+++ b/clinicalTrials-frontend/src/app/trial-form/trial-form.component.html
@@ -52,5 +52,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Close</button>
-    <button mat-button [mat-dialog-close]="true" (click)="onSubmit()" cdkFocusInitial>{{buttonName}}</button>
+    <button mat-button (click)="onSubmit()" cdkFocusInitial>{{buttonName}}</button>
 </mat-dialog-actions>
