protocol test version 1

--- a/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
+++ b/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
@@ -33,7 +33,7 @@
                 <p mat-line>{{trial.firstAddedDate | date:'dd-MM-yyyy'}}</p>
                 <div class="button-container">
                     <button [disabled]="!hasUser" mat-icon-button color="primary"
-                        (click)="moreTrial(trial.eudraCTNumber)" aria-label="More info Trial" title="more info Trial">
+                        (click)="moreTrial(trial.eudraCTNumber)" aria-label="More info Trial" title="more info for Trial">
                         <mat-icon>more</mat-icon>
                     </button>
                     <button [disabled]="!hasUser" mat-icon-button color="primary"
