--- a/clinicalTrials-frontend/src/app/header/header.component.css
+++ b/clinicalTrials-frontend/src/app/header/header.component.css
@@ -1,3 +1,6 @@
-.user-button {
+.user-container {
     margin-left: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
