--- a/clinicalTrials-frontend/src/app/log-in/log-in.component.html
+++ b/clinicalTrials-frontend/src/app/log-in/log-in.component.html
@@ -1,14 +1,14 @@
 <h2 mat-dialog-title>Log In</h2>
 <mat-dialog-content class="mat-typography">
     <h3>Please add your credentials:</h3>
-    <div class="example-container">
+    <div class="example-container" [formGroup]="loginForm">
         <mat-form-field appearance="fill" floatLabel="always">
-            <mat-label>Username</mat-label>
-            <input matInput class="example-right-align" placeholder="Username">
+            <mat-label>User Id</mat-label>
+            <input matInput class="example-right-align" placeholder="Id" formControlName="id">
         </mat-form-field>
         <mat-form-field appearance="fill">
             <mat-label>Enter your password</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'">
+            <input matInput [type]="hide ? 'password' : 'text'" formControlName="pass">
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                 [attr.aria-pressed]="hide">
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
