Fix issues with UI protocols and add get All protocols call

--- a/clinicalTrials-frontend/src/app/main-page/main-page.component.html
+++ b/clinicalTrials-frontend/src/app/main-page/main-page.component.html
@@ -47,5 +47,9 @@
         title="Navigate to Trial">
         Go To Trials
     </button>
+    <button mat-raised-button color="primary" (click)="navigateToProtocol()" aria-label="Navigate to Trial"
+        title="Navigate to Trial">
+        Go To Protocols
+    </button>
 </section>
 maybe add some image here
