--- a/clinicalTrials-frontend/src/app/user-details/user-details.component.html
+++ b/clinicalTrials-frontend/src/app/user-details/user-details.component.html
@@ -19,10 +19,10 @@
     <h3>Sponsor</h3>
     <mat-divider></mat-divider>
     <mat-list>
-        <mat-list-item>Name Of Supporting Organisation: </mat-list-item>
+        <mat-list-item>Name Of Supporting Organisation: {{sponsor.nameOfSupportingOrg}} </mat-list-item>
         <mat-divider></mat-divider>
-        <mat-list-item>Name: </mat-list-item>
+        <mat-list-item>Name: {{sponsor.sponsorName}}</mat-list-item>
         <mat-divider></mat-divider>
-        <mat-list-item>Status: </mat-list-item>
+        <mat-list-item>Status: {{sponsor.sponsorStatus}}</mat-list-item>
     </mat-list>
 </div>
