--- a/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
+++ b/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
@@ -1,7 +1,7 @@
 <section class="trials-section">
     <h2>Trials</h2>
     <button mat-raised-button color="primary" aria-label="Add new Trial" title="Add new Trial"
-        (click)="addNewTrial()">Add a
+        [disabled]="!this.userService.hasUser" (click)="addNewTrial()">Add a
         trial</button>
 </section>
 <div>
