--- a/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
+++ b/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
@@ -5,7 +5,7 @@
         trial</button>
 </section>
 <div>
-    <mat-list>
+    <mat-list class="trial-list">
         <mat-list-item class="header">
             <h4>EudraCTNumber</h4>
             <h4>Trial Status</h4>
