--- a/clinicalTrials-frontend/src/app/app.component.html
+++ b/clinicalTrials-frontend/src/app/app.component.html
@@ -1,9 +1,8 @@
 <app-header></app-header>
 <section class="content">
+  <app-sidebar></app-sidebar>
   <router-outlet></router-outlet>
 </section>
 <footer class="footer">
-  <div>
-    <p>UOA Bionformatics 2021 - 2022</p>
-  </div>
+  <p class="copyright">UOA Bionformatics 2021 - 2022</p>
 </footer>
